# smartfarm-ingest

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.qa-gen.yml  docker-compose.translate.yml  docker-compose.yml  pyproject.toml  requirements-docker.txt  requirements.txt  structure.txt
config/: AGENTS.md  settings.yaml
docker/: Dockerfile.qa_gen  Dockerfile.translate
examples/: test_doc.txt  test_document.txt
pipeline/: __init__.py  artifact_export.py  artifact_import.py  docling_parser.py  document_parser.py  env_contract.py  kg_writer.py  kimi_extractor.py  llm_extractor.py  ontology.py  ontology_builder.py  public_ingest_runner.py  reproducibility_check.py  vector_writer.py
pipeline/embeddings/: __init__.py  base.py  factory.py  huggingface_api_provider.py  llama_cpp_provider.py  openai_compat_provider.py
prompts/: AGENTS.md  answer.jinja  evolution.jinja  generation.jinja  judge.jinja  mt_mqm_judge.jinja  mt_postedit.jinja  mt_translate.jinja  refine.jinja
scripts/: AGENTS.md  batch_translate_parallel.py  merge_translations.py
scripts/indexing/: build_index_offline.py  build_trigraph_index.py
src/dataset_pipeline/: AGENTS.md  __init__.py  __main__.py  base_kb_compiler.py  chunking_utils.py  cli.py  config.py  constants.py  corpus_cli.py  corpus_io.py  corpus_text.py  generator.py  json_utils.py  judge.py  langchain_compat.py  llm_connector.py  main.py  mt_tools.py  rag_connector.py  refiner.py  reproducibility.py
src/dataset_pipeline/sources/: AGENTS.md  __init__.py  cgiar.py
src/dataset_pipeline/validation/: AGENTS.md  (+5 more)
tests/: AGENTS.md  test_artifact_export.py  test_artifact_import.py  test_docling_parser.py  test_env_contract.py  test_huggingface_embedding_provider.py  test_kimi_extractor.py  test_llm_extractor.py  test_pipeline.py  test_public_ingest.py  test_public_ingest_v2.py  test_rag_grounding.py  test_reproducibility_check.py  test_vector_writer_embeddings.py
