[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartfarm-dataset-pipeline"
version = "1.0.0"
description = "LLM-as-a-Judge 기반 RAG 데이터셋 구축 시스템"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Smart Farm RAG Team"}
]
keywords = ["llm", "rag", "dataset", "smartfarm", "llm-as-judge"]

dependencies = [
    "openai>=1.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "ragas>=0.2.0",
    "datasets>=2.18.0",
    "langchain-openai>=0.1.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.1",
    "sentence-transformers>=2.2.0",
    "tiktoken>=0.5.0",
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
    "pypdf>=3.0.0",
    "pdfplumber>=0.10.0",
    "Pillow>=10.0.0",
    "pdf2image>=1.16.0",
    "easyocr>=1.7.0",
    "unstructured>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
paddle = [
    "paddlepaddle>=2.5.0",
    "paddleocr>=2.7.0",
]
deepseek = [
    "transformers>=4.45.0",
    "vllm>=0.8.5",
    "flash-attn>=2.6.0",
    "accelerate>=0.25.0",
]

[project.scripts]
dataset-pipeline = "dataset_pipeline.main:main"
corpus-cli = "dataset_pipeline.corpus_cli:main"

[tool.setuptools.packages.find]
where = ["src"]
